--- a/style.css
+++ b/style.css
@@ -54,7 +54,9 @@ img {
 .main {
   display: none;
 }
-
+#error-message{
+  color: red;
+}
 @media (max-width: 767px) {
   .justify-content-around.align-items-center.mt-3.gallery-header.mb-2 {
     flex-direction: column;
